--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -66,7 +66,10 @@ ggplot(qpcr, aes(x = log10(C.Ssid), y = log10(D.Ssid))) +
   geom_point() +
   geom_abline(linetype = 2) +
   xlim(-8, 1) + ylim(-8, 1)
+
 ```
+
+# New line of text
 
 # Import IPAM data
 ```{r}
